# 2023-nematode-embryo-classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/: CI.yaml  lint-and-test.yaml
docs/: conf.py  data_schema.md  index.md  pipeline.md
ground_truth/: embryo_developmental_stage.csv  embryo_metadata.csv  test_annotations.csv  training_annotations.csv
notebooks/: barplots-final-embryo-states.ipynb
src/embryostage/: file_utils.py  metadata.py
src/embryostage/annotate/: __init__.py
src/embryostage/cli/: options.py
src/embryostage/metrics/: __init__.py
src/embryostage/models/: __init__.py  classification.py  constants.py  data.py
src/embryostage/preprocess/: EmbryoFinder.py  embryo_finder.py  utils.py
src/embryostage/scripts/: batch_classify_embryos.py  convert_nd2_to_zarr.py  encode_dynamics.py  explore_annotated_embryos.py  find_embryos.py  nd2omezarr.py  plot_confusion_matrix.py  post_process_predictions.py  postprocess_embryos.py  tile_cropped_embryos.py  tile_embryos.py  train_models.py  view_embryo_classification.py  view_embryos.py
src/embryostage/tests/: test_placeholder.py
tests/: __init__.py  test_annotations.py
