[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "embryostage"
description = "Classification of embryonic stages from label-free movies"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Shalin Mehta", email = "shalin.mehta@gmail.com" },
  { name = "Dave Matus", email = "dave.matus@arcadiascience.com" },
  { name = "Keith Cheveralls", email = "keith.cheveralls@arcadiascience.com" },
]

# TODO: pin versions of all dependencies here
dependencies = [
  "iohub==0.1.0.dev4",
  "nd2",
  "torch>=2.0.0",
  "tensorboard>=2.13.0",
  "lightning>=2.0.1",
  "pytorch_model_summary",
  "numpy",
  "qtpy",
  "pandas",
  "natsort",
  "napari[all]",
  "napari-ome-zarr",
  "matplotlib",
  "opencv-python",
  "scikit-image",
  "scikit-learn",
  "torchvision",
  "torchmetrics",
  "monai",
  "tensorboard",
  "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
metrics = ["torchmetrics[detection]>=1.0.0"]
dev = [
  "black~=22.3",
  "flake8~=5.0",
  "isort~=5.10",
  "pre-commit~=2.19",
  "pylint~=2.14",
  "pytest~=7.1",
  # TODO: remove these if unused after writing tests
  "pytest-cov",
  "hypothesis",
  "profilehooks",
  "onnxruntime",
]

[project.scripts]
embryostage = "embryostage.cli.cli:main"

[tool.setuptools_scm]
write_to = "src/embryostage/_version.py"

[tool.black]
src = ["embryostage"]
line-length = 95
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | notebooks
    | ignore
    | _version.py
  )
)
'''

[tool.isort]
profile = "black"
line_length = 95
lines_between_types = 1
default_section = "THIRDPARTY"
no_lines_before = ["STDLIB", "THIRDPARTY"]
ensure_newline_before_comments = true
