[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "embryostage"
description = "Classification of embryonic stages from label-free movies"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Shalin Mehta", email = "shalin.mehta@gmail.com" },
  { name = "Dave Matus", email = "dave.matus@arcadiascience.com" },
  { name = "Keith Cheveralls", email = "keith.cheveralls@arcadiascience.com" },
]

dependencies = [
  "iohub==0.1.0.dev4",
  "lightning==2.1.0",
  "matplotlib==3.8.1",
  "monai==1.3.0",
  "natsort==8.4.0",
  "napari==0.4.18",
  "napari-ome-zarr==0.5.2",
  "nd2==0.8.0",
  "numpy==1.26.0",
  "pandas==2.1.2",
  "pytorch_model_summary==0.1.2",
  "qtpy==2.4.1",
  "scikit-image==0.22.0",
  "scikit-learn==1.3.2",
  "tensorboard==2.15.0",
  "torch==2.1.0",
  "torchvision==0.16.0",
  "torchmetrics==1.2.0",
  "tqdm==4.66.1",
]
dynamic = ["version"]

[project.optional-dependencies]
metrics = ["torchmetrics[detection]>=1.0.0"]
dev = [
  "black~=22.3",
  "flake8~=5.0",
  "isort~=5.10",
  "pre-commit~=2.19",
  "pylint~=2.14",
  "pytest~=7.1",
]

[project.scripts]
convert-nd2-to-zarr = "embryostage.scripts.convert_nd2_to_zarr:main"
find-embryos = "embryostage.scripts.find_embryos:main"
view-embryos = "embryostage.scripts.view_embryos:main"
encode-dynamics = "embryostage.scripts.encode_dynamics:main"
train-models = "embryostage.scripts.train_models:main"
view-embryo-classification = "embryostage.scripts.view_embryo_classification:main"
batch-classify-embryos = "embryostage.scripts.batch_classify_embryos:main"

post-process-predictions = "embryostage.scripts.post_process_predictions:main"
plot-confusion-matrix = "embryostage.scripts.plot_confusion_matrix:main"
tile-embryos = "embryostage.scripts.tile_embryos:main"


[tool.setuptools_scm]
write_to = "src/embryostage/_version.py"

[tool.black]
src = ["embryostage"]
line-length = 95
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | notebooks
    | ignore
    | _version.py
  )
)
'''

[tool.isort]
profile = "black"
line_length = 95
lines_between_types = 1
default_section = "THIRDPARTY"
no_lines_before = ["STDLIB", "THIRDPARTY"]
ensure_newline_before_comments = true
